--- a/prices/macro.html
+++ b/prices/macro.html
@@ -230,6 +230,16 @@ body {
 
 </head>
 <body>
+
+	    <!-- Modal for Enlarged Chart -->
+    <div id="chartModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div id="modal-chart-container" class="modal-chart-container"></div>
+        </div>
+    </div>
+	
+	
     <div id="navbar-container"></div> <!-- Navbar will load here -->
 	<div id="page-navbar-container">
 		<ul id="page-navbar"></ul>
