--- a/prices/macro.html
+++ b/prices/macro.html
@@ -351,10 +351,10 @@ body {
         });
     }
 	
-	initializeChart("container1", "json_config/eusupply.json");
-	initializeChart("container2", "json_config/lngregas.json");
-	initializeChart("container3", "json_config/uaimport.json");
-	initializeChart("container4", "json_config/usfeed.json");
+	initializeChart("container1", "macro/json_config/eusupply.json");
+	initializeChart("container2", "macro/json_config/lngregas.json");
+	initializeChart("container3", "macro/json_config/uaimport.json");
+	initializeChart("container4", "macro/json_config/usfeed.json");
 
 
 </script>
