--- a/prices/macro.html
+++ b/prices/macro.html
@@ -244,7 +244,7 @@ body {
 	<div id="page-navbar-container">
 		<ul id="page-navbar"></ul>
 	</div>
-    <h1>Morning Tables</h1>		
+    <h1>MMorning Tables</h1>		
 	<H4 id="timestamp">Last updated:</h4>
 	<h2> Macro Instruments</H2>
     <div id="table-container-1"></div>
