--- a/prices/macro.html
+++ b/prices/macro.html
@@ -244,7 +244,7 @@ body {
 	<div id="page-navbar-container">
 		<ul id="page-navbar"></ul>
 	</div>
-    <h1>MMorning Tables</h1>		
+    <h1>Morning Tables</h1>		
 	<H4 id="timestamp">Last updated:</h4>
 	<h2> Macro Instruments</H2>
     <div id="table-container-1"></div>
@@ -266,13 +266,13 @@ body {
 	
 	<H1>Flows (Charts)</H1>
 	<div class="chart-row">
-        <div class="chart-container" id="container-1"></div>
-        <div class="chart-container" id="container-2"></div>
-        <div class="chart-container" id="container-3"></div>
+        <div class="chart-container" id="container1"></div>
+        <div class="chart-container" id="container2"></div>
+        <div class="chart-container" id="container3"></div>
     </div>
 	
 	<div class="chart-row">
-        <div class="chart-container" id="container-4"></div>
+        <div class="chart-container" id="container4"></div>
     </div>
 	
 	<H1>Flows (Tables)</H1>
