--- a/wx/ecens_evo.html
+++ b/wx/ecens_evo.html
@@ -237,6 +237,13 @@ body {
     </style>
 </head>
 <body>
+    <div id="chartModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div id="modal-chart-container" class="modal-chart-container"></div>
+        </div>
+    </div>
+	
     <div id="navbar-container"></div> <!-- Navbar will load here -->
 	<div id="page-navbar-container">
 		<ul id="page-navbar"></ul>
