--- a/wx/ecens_evo.html
+++ b/wx/ecens_evo.html
@@ -407,22 +407,22 @@ body {
         });
     }
 	
-	initializeChart("DE", "ecens_evo/json_config/DE.html");
-	initializeChart("FR", "ecens_evo/json_config/FR.html");
-	initializeChart("AT", "ecens_evo/json_config/AT.html");
-	initializeChart("BE", "ecens_evo/json_config/BE.html");
-	initializeChart("BG", "ecens_evo/json_config/BG.html");
-	initializeChart("CH", "ecens_evo/json_config/CH.html");
-	initializeChart("CZ", "ecens_evo/json_config/CZ.html");
-	initializeChart("GR", "ecens_evo/json_config/GR.html");
-	initializeChart("HR", "ecens_evo/json_config/HR.html");
-	initializeChart("HU", "ecens_evo/json_config/HU.html");
-	initializeChart("IT", "ecens_evo/json_config/IT.html");
-	initializeChart("NL", "ecens_evo/json_config/NL.html");
-	initializeChart("PL", "ecens_evo/json_config/PL.html");
-	initializeChart("RO", "ecens_evo/json_config/RO.html");
-	initializeChart("SI", "ecens_evo/json_config/SI.html");
-	initializeChart("SK", "ecens_evo/json_config/SK.html");
+	initializeChart("DE", "ecens_evo/json_config/DE.json");
+	initializeChart("FR", "ecens_evo/json_config/FR.json");
+	initializeChart("AT", "ecens_evo/json_config/AT.json");
+	initializeChart("BE", "ecens_evo/json_config/BE.json");
+	initializeChart("BG", "ecens_evo/json_config/BG.json");
+	initializeChart("CH", "ecens_evo/json_config/CH.json");
+	initializeChart("CZ", "ecens_evo/json_config/CZ.json");
+	initializeChart("GR", "ecens_evo/json_config/GR.json");
+	initializeChart("HR", "ecens_evo/json_config/HR.json");
+	initializeChart("HU", "ecens_evo/json_config/HU.json");
+	initializeChart("IT", "ecens_evo/json_config/IT.json");
+	initializeChart("NL", "ecens_evo/json_config/NL.json");
+	initializeChart("PL", "ecens_evo/json_config/PL.json");
+	initializeChart("RO", "ecens_evo/json_config/RO.json");
+	initializeChart("SI", "ecens_evo/json_config/SI.json");
+	initializeChart("SK", "ecens_evo/json_config/SK.json");
 
 
     // Initialize multiple charts using the function
